fixed css issue squashing article categories

--- a/assets/css/lists.css
+++ b/assets/css/lists.css
@@ -1,7 +1,7 @@
-article ul li {
+article ul li :not(footer) {
     line-height: 0.75rem;
 }
 
-article ol li {
+article ol li :not(footer) {
     line-height: 0.75rem;
 }
